[tool.poetry]
name = "mtslinker"
version = "0.1.0"
description = ""
authors = ["motattack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
tqdm = "^4.66.5"
moviepy = "^1.0.3"

[tool.poetry.scripts]
mtslinker = "mtslinker.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
